--- a/inventario_web/inventario/app/templates/inventario/base.html
+++ b/inventario_web/inventario/app/templates/inventario/base.html
@@ -49,7 +49,16 @@
                         <a class="nav-link" href="#">Proveedores</a>
                     </li>
                     <li class="list-group-item">
-                        <a class="nav-link" href="#">Proveedores</a>
+                        <a class="nav-link" href="#">Reportes</a>
+                    </li>
+                    <li class="list-group-item">
+                        <a class="nav-link" href="#">Balances</a>
+                    </li>
+                    <li class="list-group-item">
+                        <a class="nav-link" href="#">Estadísticas</a>
+                    </li>
+                    <li class="list-group-item">
+                        <a class="nav-link" href="#">Pedidos</a>
                     </li>
                     <li class="list-group-item">
                         <a class="nav-link" href="#">Proveedores</a>
@@ -64,20 +73,11 @@
                         <a class="nav-link" href="#">Proveedores</a>
                     </li>
                     <li class="list-group-item">
-                        <a class="nav-link" href="#">Proveedores</a>
-                    </li>
-                    <li class="list-group-item">
-                        <a class="nav-link" href="#">Proveedores</a>
-                    </li>
-                    <li class="list-group-item">
-                        <a class="nav-link" href="#">Proveedores</a>
-                    </li>
-                    <li class="list-group-item">
-                        <a class="nav-link" href="#">Proveedores</a>
+                        <a class="nav-link" href="#">Soporte</a>
                     </li>
                 </ul>
             </div>
-            <div class="col-10">
+            <div class="col-10 bg-contenido">
                 {% block contenido %}
                 {% endblock %}
             </div>
