--- a/inventario_web/inventario/app/templates/inventario/listado.html
+++ b/inventario_web/inventario/app/templates/inventario/listado.html
@@ -3,12 +3,14 @@
 {% load static %}
 
 {% block contenido %}
+
+{% load humanize %}
     <h1>Aca va el listado de productos</h1>
     <div class="input-group mb-12">
         <form class="input-group mb-3" action="{% url 'buscar_producto' %}" method="GET">
             {% csrf_token %}
             <input type="text" name="q" class="form-control" placeholder="buscador de productos por nombre">
-            <button class="btn btn-success" type="submit">Buscar</button>
+            <button class="btn btn-info" type="submit">Buscar</button>
         </form>
     </div>
     <table class="table table-striped table-hover table-responsive-sm table-warning">
@@ -46,11 +48,11 @@
                 <td>{{ producto.categoria }}</td>
                 <td>
                     {% if perms.app.change_producto %}
-                        <a href="#" onclick="saludar()" class="btn btn-info btn-sm">Modificar</a>
+                        <a href="{% url 'modificar_producto' producto.id %}" class="btn btn-info btn-sm">Modificar</a>
                     {% endif %}
                     &nbsp;
                     {% if perms.app.delete_producto %}
-                        <a href="#" onclick="despedida()" class="btn btn-danger btn-sm">Eliminar</a>
+                        <a href="#" onclick="eliminar_producto('{{producto.id}}')" class="btn btn-danger btn-sm">Eliminar</a>
                     {% endif %}
                 </td>
 
