--- a/inventario_web/inventario/app/static/inventario/css/login.css
+++ b/inventario_web/inventario/app/static/inventario/css/login.css
@@ -16,3 +16,11 @@ body{
 .card:hover { 
     box-shadow: 0 0 30px rgba(0, 255, 255, 1), 0 0 40px rgba(0, 255, 255, 1), 0 0 50px rgba(0, 255, 255, 1); 
 }
+
+.form-control{
+    border-radius: 40px;
+}
+
+.btn{
+    border-radius: 15px;
+}
