--- a/inventario_web/inventario/app/templates/proveedores/proveedor_congelados.html
+++ b/inventario_web/inventario/app/templates/proveedores/proveedor_congelados.html
@@ -1,7 +1,44 @@
 {% extends 'inventario/base.html' %} 
 
+{% load static %}
+
 {% block contenido %}
 
-<h1>Congelados Food</h1> 
+{% load humanize %}
+<h1>Congelados Food</h1>
 
+<table class="table table-striped table-hover table-responsive-sm table-warning">
+    <thead class="table-dark">
+        <th>Nombre</th>
+        <th>Descripción</th>
+        <th>F.Venc</th>
+        <th>Código Bulto</th>
+        <th>Unidades</th>
+        <th>Precio Bulto</th>
+        <th>Marca</th>
+        <th>Acción</th>
+    </thead>
+    
+    {% for congelado in congelados %}
+        {% if congelado.proveedor.nombre == "Congelados Food" %}
+            <tr>
+                <td><span id="contador-{{ congelado.id }}" class="position-absolute translate-middle badge rounded-pill bg-danger" hidden>0</span> {{ congelado.nombre }}</td>
+                <td>{{ congelado.descripcion }}</td>
+                <td>{{ congelado.fecha_vencimiento | date:"d/m/y" }}</td>
+                <td>{{ congelado.codigo_bulto }}</td>
+                <td>{{ congelado.cantidad_bulto }}</td>
+                <td>${{ congelado.precio_bulto }}</td>
+                <td>{{ congelado.marca }}</td>
+                <td>
+                    <button data-id="{{ congelado.id }}" class="incrementar btn btn-success btn-sm">+</button>
+                    <button data-id="{{ congelado.id }}" class="disminuir btn btn-danger btn-sm">-</button>
+                </td>
+            </tr>
+        {% endif %}
+    {% endfor %}
+</table>
+{% include 'proveedores/paginator_proveedores.html' with productos=congelados %}
+    {% block js %}
+        <script src="{% static 'proveedores/js/proveedores.js' %}"></script>
+    {% endblock %}
 {% endblock %}
