Carrito en condiciones aceptable, correccion de errores

--- a/inventario_web/inventario/app/templates/inventario/pagar_productos.html
+++ b/inventario_web/inventario/app/templates/inventario/pagar_productos.html
@@ -9,4 +9,5 @@
 
 {% load humanize %}
 <h1>Aca va el pago</h1>
+<a href="{% url 'generar_pdf' %}" class="btn btn-checkout btn-danger w-100">Imprimir resumen</a>
 {% endblock %}
