Proveedores 3/3 finalizados, falta corregir el resumen del pdf para que se divida en varias hojas si es que hay muchos productos comprar

--- a/inventario_web/inventario/app/templates/inventario/sesion_usuario.html
+++ b/inventario_web/inventario/app/templates/inventario/sesion_usuario.html
@@ -13,7 +13,8 @@
         <td>{{ sesion.user.username }}</td> 
         <td>{{ sesion.login_time }}</td> 
         <td>{{ sesion.logout_time }}</td> 
-    </tr> {% endfor %}
-
+    </tr> 
+    {% endfor %}
+</table>
 
 {% endblock %}
