--- a/inventario_web/inventario/app/templates/proveedores/proveedor_congelados.html
+++ b/inventario_web/inventario/app/templates/proveedores/proveedor_congelados.html
@@ -5,7 +5,16 @@
 {% block contenido %}
 
 {% load humanize %}
-<h1>Congelados Food</h1>
+<div class="d-flex justify-content-between">
+    <div>
+        <h1>Congelados Food</h1>
+    </div>
+    <div>
+        <a href="{% url 'ver_carrito' %}" class="btn btn-primary mt-2"> 
+            <i class="bi bi-cart fs-5"></i> Carrito de Compras 
+        </a>
+    </div>
+</div>
 
 <table class="table table-striped table-hover table-responsive-sm table-warning">
     <thead class="table-dark">
@@ -30,12 +39,18 @@
                 <td>${{ congelado.precio_bulto }}</td>
                 <td>{{ congelado.marca }}</td>
                 <td>
-                    <div class="form-check form-switch"> 
-                        <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault"> 
-                        <label class="form-check-label" for="flexSwitchCheckDefault">Agregar al carrito</label>
+                    <div class="form-check form-switch">
+                        <form method="POST" action="{% url 'agregar_al_carrito' congelado.id %}">
+                            {% csrf_token %}
+                            <input type="hidden" name="producto" value="{{ congelado.id }}">
+                            <input type="hidden" name="cantidad" value="1">
+                            <input class="form-check-input" type="checkbox" id="switch-{{ congelado.id }}" onchange="this.form.submit()">
+                            <label class="form-check-label" for="switch-{{ congelado.id }}">{{ congelado.nombre }}</label>
+                        </form>
                     </div>
                 </td>
             </tr>
+            {{ message }}
         {% endif %}
     {% endfor %}
 </table>
