Funciones terminadas, queda estilizar y hacer las ultimas pruebas para finalizar el proyecto

--- a/inventario_web/inventario/app/templates/inventario/agregar.html
+++ b/inventario_web/inventario/app/templates/inventario/agregar.html
@@ -6,11 +6,11 @@
 {% load static %}
 <link rel="stylesheet" href="{% static 'inventario/css/agregar.css' %}">
 
-<div class="row">
+<div class="row text-dark">
   <div class="col-9 col-md-9 centrar">
     <div class="card">
       <div class="card-body">
-        <h2>Nuevo Producto</h2>
+        <h2>NUEVO PRODUCTO</h2>
         <hr>
         <form class="formulario-personalizado" action="" method="post" enctype="multipart/form-data">
           {% csrf_token %} 
