--- a/inventario_web/inventario/app/templates/inventario/listado.html
+++ b/inventario_web/inventario/app/templates/inventario/listado.html
@@ -5,7 +5,7 @@
 {% block contenido %}
 
 {% load humanize %}
-    <h1>Aca va el listado de productos</h1>
+    <h1>LISTADO DE PRODUCTOS</h1>
     <div class="input-group mb-12">
         <form class="input-group mb-3" action="{% url 'buscar_producto' %}" method="GET">
             {% csrf_token %}
