--- a/inventario_web/inventario/app/static/inventario/css/balances.css
+++ b/inventario_web/inventario/app/static/inventario/css/balances.css
@@ -8,11 +8,18 @@ h1{
     text-align: center;
 }
 
-#grafico-contenedor, #loading {
+#loading{
+    text-align: center;
+    font-size: 2rem;
+    margin-bottom: 10px;
+}
+
+#grafico-contenedor{
     margin-top: 20px;
     height: 100vh;
     overflow-y: auto;
     padding: 20px;
+    background: linear-gradient(120deg, #e0eafc, #cfdef3); /* Degradado suave */
     border-radius: 15px;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1); /* Sombra suave */
     text-align: center;
