--- a/inventario_web/inventario/app/templates/inventario/ver_carrito.html
+++ b/inventario_web/inventario/app/templates/inventario/ver_carrito.html
@@ -11,7 +11,7 @@
 
 <form method="post" action="{% url 'pagar_productos' %}">
     {% csrf_token %}
-    <div class="container mt-5 bg-light formulario-personalizado">
+    <div class="container mt-5 bg-light formulario-personalizado text-dark">
         <div class="row">
             <!-- Shopping Cart Items -->
             <div class="col-lg-8">
