--- a/inventario_web/inventario/app/templates/registration/login.html
+++ b/inventario_web/inventario/app/templates/registration/login.html
@@ -10,19 +10,10 @@
 </head>
 <body>
   {% load crispy_forms_tags %}
-    <div class="row">
-        <div class="col-12 col-md-6 offset-md-3">
-          <div class="card">
-            <div class="card-body">
-              <h2>Ingresá tus credenciales</h2>
-              <form action="" method="post">
-                {% csrf_token %}
-                {{ form | crispy}}
-                <button type="submit" class="btn btn-success float-right">Ingresar</button>
-              </form>
-            </div>
-          </div>
-        </div>
-    </div>
+  <form class="login" action="" method="post">
+    {% csrf_token %}
+    {{ form | crispy}}
+    <button type="submit" class="btn btn-success float-right">Ingresar</button>
+  </form>
 </body>
 </html>
