--- a/inventario_web/inventario/app/templates/inventario/balances/balance_inventario.html
+++ b/inventario_web/inventario/app/templates/inventario/balances/balance_inventario.html
@@ -4,7 +4,7 @@
 {% load static %}
 <link rel="stylesheet" href="{% static 'inventario/css/balances.css' %}">
 
-    <h1>Balances</h1>
+    <h1>BALANCES</h1>
     <div id="grafico-contenedor" class="container">
         <div id="loading">Cargando gráficos...</div>
         <!-- Gráfico de barras -->
