--- a/inventario_web/inventario/app/templates/inventario/reportes/productos_bajo_stock.html
+++ b/inventario_web/inventario/app/templates/inventario/reportes/productos_bajo_stock.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" href="{% static 'inventario/css/dash.css' %}">
 
 <div class="container mt-5">
-    <h1>Reporte de Productos con Baja Cantidad en Stock</h1>
+    <h1>REPORTE DE BAJO STOCK</h1>
     <div id="grafico-contenedor">
         <div id="loading" style="text-align: center;">Cargando gráfico...</div>
         <div id="grafico">
