--- a/inventario_web/inventario/app/templates/inventario/estadisticas/producto_mas_comprado.html
+++ b/inventario_web/inventario/app/templates/inventario/estadisticas/producto_mas_comprado.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" href="{% static 'inventario/css/dash.css' %}">
 
 <div class="container mt-5">
-    <h1>Estadísticas</h1>
+    <h1>ESTADÍSTICAS</h1>
     <div id="grafico-contenedor">
         <div id="loading" style="text-align: center;">Cargando gráfico...</div>
         <div id="grafico">
