--- a/inventario_web/inventario/app/templates/inventario/listado.html
+++ b/inventario_web/inventario/app/templates/inventario/listado.html
@@ -13,19 +13,21 @@
             <button class="btn btn-info" type="submit">Buscar</button>
         </form>
     </div>
-    <table class="table table-striped table-hover table-responsive-sm table-warning">
-        <th>Nombre</th>
-        <th>Descripcion</th>
-        <th>Peso Neto</th>
-        <th>F.Ingreso</th>
-        <th>F.Venc.</th>
-        <th>Cant.</th>
-        <th>Precio Unit.</th>
-        <th>Activo</th>
-        <th>Marca</th>
-        <th>Proveedor</th>
-        <th>Categoria</th>
-        <th>Acción</th>
+    <table class="table table-striped table-hover table-responsive-sm table-dark">
+        <thead class="table-primary">
+            <th>Nombre</th>
+            <th>Descripcion</th>
+            <th>Peso Neto</th>
+            <th>F.Ingreso</th>
+            <th>F.Venc.</th>
+            <th>Cant.</th>
+            <th>Precio Unit.</th>
+            <th>Activo</th>
+            <th>Marca</th>
+            <th>Proveedor</th>
+            <th>Categoria</th>
+            <th>Acción</th>
+        </thead>
 
         {% for producto in productos %}
             <tr>
@@ -48,11 +50,11 @@
                 <td>{{ producto.categoria }}</td>
                 <td>
                     {% if perms.app.change_producto %}
-                        <a href="{% url 'modificar_producto' producto.id %}" class="btn btn-info btn-sm">Modificar</a>
+                        <a href="{% url 'modificar_producto' producto.id %}" class="btn btn-info btn-sm" style="width: 80px;">Modificar</a>
                     {% endif %}
                     &nbsp;
                     {% if perms.app.delete_producto %}
-                        <a href="#" onclick="eliminar_producto('{{producto.id}}')" class="btn btn-danger btn-sm">Eliminar</a>
+                        <a href="#" onclick="eliminar_producto('{{producto.id}}')" class="btn btn-danger btn-sm"  style="width: 80px;">Eliminar</a>
                     {% endif %}
                 </td>
 
