--- a/inventario_web/inventario/app/templates/inventario/modificar.html
+++ b/inventario_web/inventario/app/templates/inventario/modificar.html
@@ -6,16 +6,16 @@
 {% load static %}
 <link rel="stylesheet" href="{% static 'inventario/css/agregar.css' %}">
 
-<div class="row text-dark">
+<div class="row text-light">
   <div class="col-9 col-md-9 centrar">
     <div class="card">
-      <div class="card-body">
+      <div class="card-body bg-dark">
         <h2>EDITAR PRODUCTO</h2>
         <hr>
         <form class="formulario-personalizado" action="" method="post" enctype="multipart/form-data">
           {% csrf_token %} 
           {{ form | crispy }}
-          <div class="d-flex justify-content-end">
+          <div class="d-flex justify-content-center">
             <a href="{% url 'listado' %}" class="btn btn-secondary">Cancelar</a>
             &nbsp;
             <input type="submit" value="Editar" class="btn btn-primary" />
