--- a/inventario_web/inventario/app/templates/inventario/sesion_usuario.html
+++ b/inventario_web/inventario/app/templates/inventario/sesion_usuario.html
@@ -1,13 +1,13 @@
 {% extends 'inventario/base.html' %} 
 {% block contenido %}
 
-<h1>Sesiones de Usuarios</h1> 
-<table class="table table-striped table-hover table-responsive-sm table-warning"> 
-    <tr> 
+<h1>SESIONES DE USUARIOS</h1> 
+<table class="table table-striped table-hover table-responsive-sm table-dark"> 
+    <thead class="table-primary">
         <th>Nombre de usuario</th> 
         <th>Entrada</th> 
         <th>Salida</th> 
-    </tr> 
+    </thead>
     {% for sesion in sesiones %} 
     <tr> 
         <td>{{ sesion.user.username }}</td> 
